[gd_scene load_steps=9 format=3 uid="uid://npbjmbt4um60"]

[ext_resource type="Script" path="res://Scenes/HUD/MainHUD/HUD.gd" id="1_niqmd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p7254"]
bg_color = Color(0.443137, 0.223529, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4qknp"]
bg_color = Color(0.862745, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lywem"]
line_spacing = 0.0
font_size = 18
font_color = Color(0.615686, 0.435294, 0.0980392, 1)
outline_size = 1
outline_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jifqf"]
line_spacing = 0.0
font_size = 18
font_color = Color(0.466667, 0.466667, 0.466667, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1yaxf"]
line_spacing = 0.0
font_size = 18
font_color = Color(0.203922, 0.576471, 0.356863, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c6w1b"]
line_spacing = 0.0
font_size = 18
font_color = Color(0.54902, 0.317647, 0.0666667, 1)

[sub_resource type="LabelSettings" id="LabelSettings_j2epg"]
line_spacing = 0.0
font_size = 18
font_color = Color(0.756863, 0.176471, 0.196078, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_niqmd")

[node name="StaminaBar" type="ProgressBar" parent="."]
offset_left = 17.0
offset_top = 586.0
offset_right = 235.0
offset_bottom = 613.0
scale = Vector2(1, 0.560001)
theme_override_styles/background = SubResource("StyleBoxFlat_p7254")
step = 1.0
value = 100.0
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 17.0
offset_top = 601.0
offset_right = 235.0
offset_bottom = 628.0
theme_override_styles/background = SubResource("StyleBoxFlat_4qknp")
step = 1.0
value = 100.0
show_percentage = false

[node name="HotBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="HotBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = 178.0
offset_right = 120.0
offset_bottom = 317.0
grow_horizontal = 2
grow_vertical = 2

[node name="Children" type="Control" parent="HotBar"]
layout_mode = 3
anchors_preset = 0
offset_left = 266.0
offset_top = 278.0
offset_right = 306.0
offset_bottom = 318.0

[node name="Melee" type="Control" parent="HotBar/Children"]
anchors_preset = 0
offset_left = -378.0
offset_top = -16.0
offset_right = -378.0
offset_bottom = -16.0
scale = Vector2(1, 0.997176)

[node name="Background" type="ColorRect" parent="HotBar/Children/Melee"]
layout_mode = 0
offset_left = -6.0
offset_top = -11.0
offset_right = 55.0
offset_bottom = 35.0
color = Color(1, 0.2, 0.176471, 1)

[node name="Label" type="Label" parent="HotBar/Children/Melee"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "MELEE"

[node name="Shoot" type="Control" parent="HotBar/Children"]
anchors_preset = 0
offset_left = -277.0
offset_top = -64.0
offset_right = -277.0
offset_bottom = -64.0

[node name="Background" type="ColorRect" parent="HotBar/Children/Shoot"]
layout_mode = 0
offset_left = -18.0
offset_top = -13.0
offset_right = 46.0
offset_bottom = 33.0
color = Color(1, 0.2, 0.176471, 1)

[node name="Label" type="Label" parent="HotBar/Children/Shoot"]
layout_mode = 0
offset_left = -14.0
offset_top = -2.0
offset_right = 42.0
offset_bottom = 21.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "SHOOT"

[node name="Delete" type="Control" parent="HotBar/Children"]
anchors_preset = 0
offset_left = 96.0
offset_top = -33.0
offset_right = 96.0
offset_bottom = -33.0

[node name="Background" type="ColorRect" parent="HotBar/Children/Delete"]
layout_mode = 0
offset_left = -301.0
offset_top = 6.0
offset_right = -234.0
offset_bottom = 52.0
color = Color(1, 0.2, 0.176471, 1)

[node name="Label" type="Label" parent="HotBar/Children/Delete"]
layout_mode = 0
offset_left = -295.0
offset_top = 17.0
offset_right = -247.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "DELETE"

[node name="Build" type="Control" parent="HotBar/Children"]
anchors_preset = 0
offset_left = -290.0
offset_top = 19.0
offset_right = -290.0
offset_bottom = 19.0

[node name="Background" type="ColorRect" parent="HotBar/Children/Build"]
layout_mode = 0
offset_left = -6.0
offset_top = -11.0
offset_right = 55.0
offset_bottom = 35.0
color = Color(1, 0.2, 0.176471, 1)

[node name="Label" type="Label" parent="HotBar/Children/Build"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "BUILD"

[node name="BuildMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="BuildMenu"]
layout_mode = 0
offset_left = 1061.0
offset_top = 153.0
offset_right = 1101.0
offset_bottom = 193.0
scale = Vector2(1.98089, 7.96039)

[node name="Children" type="Control" parent="BuildMenu"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Wall" type="Control" parent="BuildMenu/Children"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="ColorRect" parent="BuildMenu/Children/Wall"]
layout_mode = 0
offset_left = 1070.0
offset_top = 162.0
offset_right = 1110.0
offset_bottom = 202.0
scale = Vector2(1.54154, 1.11915)
color = Color(1, 0.2, 0.176471, 1)

[node name="Label" type="Label" parent="BuildMenu/Children/Wall"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 1079.0
offset_top = 172.0
offset_right = 1123.0
offset_bottom = 195.0
text = "WALL"

[node name="Torch" type="Control" parent="BuildMenu/Children"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="ColorRect" parent="BuildMenu/Children/Torch"]
layout_mode = 0
offset_left = 1070.0
offset_top = 216.0
offset_right = 1110.0
offset_bottom = 256.0
scale = Vector2(1.54154, 1.11915)
color = Color(1, 0.2, 0.176471, 1)

[node name="Label" type="Label" parent="BuildMenu/Children/Torch"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 1072.0
offset_top = 227.0
offset_right = 1127.0
offset_bottom = 250.0
text = "TORCH"

[node name="ResourceDisplay" type="BoxContainer" parent="."]
clip_contents = true
offset_left = 15.0
offset_top = 15.0
offset_right = 175.0
offset_bottom = 165.0
vertical = true

[node name="Dirt" type="Control" parent="ResourceDisplay"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="ResourceDisplay/Dirt"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.360784, 0.168627, 0.12549, 1)

[node name="Label" type="Label" parent="ResourceDisplay/Dirt"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Dirt: 0"
label_settings = SubResource("LabelSettings_lywem")
horizontal_alignment = 1

[node name="Stone" type="Control" parent="ResourceDisplay"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="ResourceDisplay/Stone"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.360784, 0.168627, 0.12549, 1)

[node name="Label" type="Label" parent="ResourceDisplay/Stone"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Stone: 0"
label_settings = SubResource("LabelSettings_jifqf")
horizontal_alignment = 1

[node name="Leaves" type="Control" parent="ResourceDisplay"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="ResourceDisplay/Leaves"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.360784, 0.168627, 0.12549, 1)

[node name="Label" type="Label" parent="ResourceDisplay/Leaves"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Leaves: 0"
label_settings = SubResource("LabelSettings_1yaxf")
horizontal_alignment = 1

[node name="Wood" type="Control" parent="ResourceDisplay"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="ResourceDisplay/Wood"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.360784, 0.168627, 0.12549, 1)

[node name="Label" type="Label" parent="ResourceDisplay/Wood"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Wood: 0"
label_settings = SubResource("LabelSettings_c6w1b")
horizontal_alignment = 1

[node name="Mobdrops" type="Control" parent="ResourceDisplay"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="ResourceDisplay/Mobdrops"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.360784, 0.168627, 0.12549, 1)

[node name="Label" type="Label" parent="ResourceDisplay/Mobdrops"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Mobdrops: 0"
label_settings = SubResource("LabelSettings_j2epg")
horizontal_alignment = 1
